--- a/app.css
+++ b/app.css
@@ -6,3 +6,15 @@ body {
 #wrt_disp, #detected_vars {
 	border-color: transparent;
 }
+
+.success-outline {
+	/* box-shadow: 0px 0px 0px 2px #00B221; */
+	outline: solid 2px #00B221;
+	transition: outline 0.2s ease-out;
+}
+
+.syntax-outline {
+	outline: solid 2px #C7974C;
+	/* box-shadow: 0px 0px 0px 5px #C7974C; */
+	transition: outline 0.2s ease-out;
+}
