--- a/app.css
+++ b/app.css
@@ -18,3 +18,15 @@ body {
 	/* box-shadow: 0px 0px 0px 5px #C7974C; */
 	transition: outline 0.2s ease-out;
 }
+
+/* .hljs-builtin-normal { color: #e6db74; }
+.hljs-builtin-special, .hljs-builtin-turtle { color: #a6e22e; }
+
+.hljs-number { color: #ae81ff; }
+.hljs-literal { color: #ae81ff; }
+.hljs-string { color: #e6db74; }
+.hljs-name { color: #f92672; }
+.hljs-symbol { color: #66d9ef; }
+.hljs-comment { color: #75715e; }
+.hljs-tag { color: #ae81ff; }
+.hljs-formula { color: #f92672; } */
