--- a/app.css
+++ b/app.css
@@ -1,22 +1,33 @@
 body {
-	background-color: black;
-	color: white;
+	background: #ECE9E6;  /* fallback for old browsers */
+	background: -webkit-linear-gradient(to right, #FFFFFF, #ECE9E6);  /* Chrome 10-25, Safari 5.1-6 */
+	background: linear-gradient(to right, #FFFFFF, #ECE9E6); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+	/* margin: 0; */
+	font: 1.5em/1.2 Symbola, serif;
+
 }
 
 #wrt_disp, #detected_vars {
 	border-color: transparent;
 }
 
+.math-field {
+	min-width: 5em;
+	background: white;
+}
+
 .success-outline {
 	/* box-shadow: 0px 0px 0px 2px #00B221; */
-	outline: solid 2px #00B221;
-	transition: outline 0.2s ease-out;
+	/* outline: solid 2px #00B221; */
+	background-color:rgba(0, 200, 0, 0.25);
+	transition: background-color 0.2s ease-out;
 }
 
 .syntax-outline {
-	outline: solid 2px #C7974C;
 	/* box-shadow: 0px 0px 0px 5px #C7974C; */
-	transition: outline 0.2s ease-out;
+	/* outline: solid 2px #C7974C; */
+	background-color:rgba(249, 51, 46, 0.25);
+	transition: background-color 0.2s ease-out;
 }
 
 /* .hljs-builtin-normal { color: #e6db74; }
