--- a/app.css
+++ b/app.css
@@ -2,6 +2,7 @@ body {
 	background: #ECE9E6;  /* fallback for old browsers */
 	background: -webkit-linear-gradient(to right, #FFFFFF, #ECE9E6);  /* Chrome 10-25, Safari 5.1-6 */
 	background: linear-gradient(to right, #FFFFFF, #ECE9E6); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+	background-attachment: fixed;
 	/* margin: 0; */
 	font: 1.5em/1.2 Symbola, serif;
 
@@ -28,6 +29,14 @@ body {
 	/* outline: solid 2px #C7974C; */
 	background-color:rgba(249, 51, 46, 0.25);
 	transition: background-color 0.2s ease-out;
+}
+
+.mathquill-disp {
+	font-size: 0.9em;
+}
+
+.mathjax-output {
+	font-size: 0.8em;
 }
 
 /* .hljs-builtin-normal { color: #e6db74; }
