--- a/app.css
+++ b/app.css
@@ -20,14 +20,21 @@ body {
 .success-outline {
 	/* box-shadow: 0px 0px 0px 2px #00B221; */
 	/* outline: solid 2px #00B221; */
-	background-color:rgba(0, 200, 0, 0.25);
+	background-color:rgba(0, 200, 0, 0.25) !important;
 	transition: background-color 0.2s ease-out;
 }
 
 .syntax-outline {
 	/* box-shadow: 0px 0px 0px 5px #C7974C; */
 	/* outline: solid 2px #C7974C; */
-	background-color:rgba(249, 51, 46, 0.25);
+	background-color:rgba(249, 51, 46, 0.25) !important;
+	transition: background-color 0.2s ease-out;
+}
+
+.init-outline {
+	/* box-shadow: 0px 0px 0px 2px #00B221; */
+	/* outline: solid 2px #00B221; */
+	background-color:rgba(230, 230, 230, 0.25);
 	transition: background-color 0.2s ease-out;
 }
 
