--- a/app.css
+++ b/app.css
@@ -72,6 +72,10 @@ h4 {
 	font-size: 1.1em;
 }
 
+tbody th {
+	font-weight: 200 !important;
+}
+
 /* .hljs-builtin-normal { color: #e6db74; }
 .hljs-builtin-special, .hljs-builtin-turtle { color: #a6e22e; }
 
