--- a/app.css
+++ b/app.css
@@ -1,3 +1,9 @@
+@font-face {
+  font-family: 'Symbola';
+  src:  url('/assets/font/Symbola.woff2') format('woff2'),
+        url('/assets/font/Symbola.woff') format('woff');
+}
+
 body {
 	background: #ECE9E6;  /* fallback for old browsers */
 	background: -webkit-linear-gradient(to right, #FFFFFF, #ECE9E6);  /* Chrome 10-25, Safari 5.1-6 */
@@ -78,6 +84,39 @@ tbody th {
 
 .mathjax-output .mjx-math {
 	margin-left: -0.4em;
+}
+
+.top-right-icon {
+	display: inline-block;
+	margin: 0px 10px 10px;
+	cursor: pointer;
+	transition: opacity 0.25s ease-in-out 0.15s;
+	opacity: 0;
+}
+
+.top-right-transition {
+	transition: opacity 0.15s ease-in-out 0s;
+}
+
+.top-right-icon:hover {
+	opacity: 0.7;
+}
+
+.top-right-fade {
+	opacity: 0.45;
+}
+
+.top-right-image {
+	height: 50px;
+	width: 50px;
+	background-size: contain;
+	background-repeat: no-repeat;
+}
+
+.jumbotron-top-right {
+	position: absolute;
+	top: 18px;
+	right: 15px;
 }
 
 /* .hljs-builtin-normal { color: #e6db74; }
